--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint:code": "tsdx lint src test",
+    "test": "CI=true tsdx test --passWithNoTests",
+    "lint:code": "eslint ./src",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
@@ -38,7 +38,7 @@
     "@ethersproject/providers": "^5.7.0",
     "@size-limit/preset-small-lib": "^8.0.1",
     "@types/react": "^18.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@web3-react/core": "^6.1.9",
     "eslint": "^8.23.0",
     "eslint-config-react-app": "^7.0.1",
