--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -12,13 +12,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "https://github.com/carrot-kpis/core-sdk.git",
+  "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
   "module": "dist/sdk.esm.js",
   "scripts": {
-    "lint": "tsdx lint src test",
+    "lint:code": "eslint ./src",
     "build": "tsdx build",
     "start": "tsdx watch",
-    "test": "tsdx test",
+    "test": "CI=true tsdx test --passWithNoTests",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -40,6 +40,8 @@
     "@ethersproject/units": "^5.7.0",
     "@size-limit/preset-big-lib": "^8.0.1",
     "@size-limit/webpack-why": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
