--- a/packages/v1-sdk/package.json
+++ b/packages/v1-sdk/package.json
@@ -12,13 +12,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "https://github.com/carrot-kpi/v1-sdk.git",
-  "module": "dist/react.esm.js",
+  "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
+  "module": "dist/v1-sdk.esm.js",
   "scripts": {
-    "lint:code": "tsdx lint src test",
+    "lint:code": "eslint ./src",
     "build": "tsdx build",
     "start": "tsdx watch",
-    "test": "tsdx test",
+    "test": "CI=true tsdx test --passWithNoTests",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -36,6 +36,8 @@
     "@ethersproject/providers": "^5.7.0",
     "@size-limit/preset-big-lib": "^8.0.1",
     "@size-limit/webpack-why": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "caniuse-lite": "^1.0.30001384",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
