--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -45,6 +45,7 @@
     "ethers": "^5.7.0",
     "git-revision-webpack-plugin": "^5.0.0",
     "graphql": "^16.6.0",
+    "ipfs-core": "^0.15.4",
     "luxon": "^3.0.3",
     "multiformats": "^9.7.1",
     "polished": "^4.2.2",
@@ -75,10 +76,11 @@
     "strip-markdown": "^5.0.0",
     "styled-components": "^5.3.5",
     "tslint": "^6.1.3",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "util": "^0.12.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-app-rewired build",
     "ipfs-build": "cross-env PUBLIC_URL=\".\" GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
@@ -98,6 +100,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {}
+  }
 }
