feat(frontend): module federation to pull in custom campaign page/creation form implementation

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,13 +7,12 @@
     "@apollo/client": "^3.6.9",
     "@carrot-kpi/core-sdk": "^1.4.1",
     "@carrot-kpi/react": "^0.1.0",
-    "@carrot-kpi/v1-sdk": "^0.7.0",
+    "@carrot-kpi/v1-sdk": "0.8.0",
     "@fontsource/manrope": "^4.5.11",
     "@fontsource/overpass-mono": "^4.5.9",
     "@popperjs/core": "^2.11.6",
     "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^1.8.5",
-    "@types/luxon": "^3.0.0",
     "@types/qs": "^6.9.7",
     "@types/rc-switch": "^1.9.2",
     "@types/react-dom": "^18.0.6",
@@ -46,7 +45,6 @@
     "git-revision-webpack-plugin": "^5.0.0",
     "graphql": "^16.6.0",
     "ipfs-core": "^0.15.4",
-    "luxon": "^3.0.3",
     "multiformats": "^9.7.1",
     "polished": "^4.2.2",
     "prettier": "^2.7.1",
