--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,7 +7,7 @@
     "@apollo/client": "^3.6.9",
     "@carrot-kpi/core-sdk": "^1.4.1",
     "@carrot-kpi/react": "^0.1.0",
-    "@carrot-kpi/v1-sdk": "0.8.0",
+    "@carrot-kpi/v1-sdk": "^0.8.1",
     "@fontsource/manrope": "^4.5.11",
     "@fontsource/overpass-mono": "^4.5.9",
     "@popperjs/core": "^2.11.6",
