chore(core-sdk): fix module entry in package.json

--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -13,7 +13,7 @@
     "access": "public"
   },
   "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
-  "module": "dist/sdk.esm.js",
+  "module": "dist/core-sdk.esm.js",
   "scripts": {
     "lint:code": "eslint ./src",
     "build": "tsdx build",
