--- a/packages/v1-sdk/package.json
+++ b/packages/v1-sdk/package.json
@@ -23,20 +23,11 @@
     "analyze": "size-limit --why"
   },
   "dependencies": {
+    "@carrot-kpi/core-sdk": "^1.4.4",
+    "ethers": "^5.7.0",
     "multiformats": "^9.9.0"
   },
-  "peerDependencies": {
-    "@carrot-kpi/core-sdk": "^1.4.3",
-    "ethers": "^5.7.0"
-  },
   "devDependencies": {
-    "@carrot-kpi/core-sdk": "^1.4.1",
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/address": "^5.7.0",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/constants": "^5.7.0",
-    "@ethersproject/contracts": "^5.7.0",
-    "@ethersproject/providers": "^5.7.1",
     "@size-limit/preset-big-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
