chore(react): move peer dependencies to dependencies

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,9 +25,9 @@
   "name": "@carrot-kpi/react",
   "author": "Federico Luzzi",
   "module": "dist/react.esm.js",
-  "peerDependencies": {
-    "@carrot-kpi/core-sdk": "^1.4.3",
-    "@carrot-kpi/v1-sdk": "^0.8.3",
+  "dependencies": {
+    "@carrot-kpi/core-sdk": "^1.4.4",
+    "@carrot-kpi/v1-sdk": "^0.8.4",
     "@web3-react/core": "^6.1.9",
     "ethers": "^5.7.0",
     "i18next": "^21.9.2",
@@ -36,24 +36,15 @@
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
-    "@carrot-kpi/core-sdk": "^1.4.3",
-    "@carrot-kpi/v1-sdk": "^0.8.3",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/providers": "^5.7.1",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@web3-react/core": "^6.1.9",
     "eslint": "^8.23.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.8",
-    "i18next": "^21.9.2",
-    "react": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-redux": "^8.0.4",
     "size-limit": "^8.1.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
