chore(react): add reduxjs toolkit to dependencies

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@carrot-kpi/core-sdk": "^1.4.4",
     "@carrot-kpi/v1-sdk": "^0.8.4",
+    "@reduxjs/toolkit": "^1.8.5",
     "@web3-react/core": "^6.1.9",
     "ethers": "^5.7.0",
     "i18next": "^21.9.2",
