--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@carrot-kpi/core-sdk",
-  "license": "GPL-3.0",
   "author": "Federico Luzzi <fedeluzzi00@gmail.com>",
   "version": "1.4.4",
+  "license": "GPL-3.0",
   "description": "Core common logic and entities to build higher-level SDKs on top of the Carrot platform.",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/carrot-kpi-core-sdk.umd.js",
+  "module": "./dist/carrot-kpi-core-sdk.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/carrot-kpi-core-sdk.es.js",
+      "require": "./dist/carrot-kpi-core-sdk.umd.js"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -13,12 +20,10 @@
     "access": "public"
   },
   "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
-  "module": "dist/core-sdk.esm.js",
   "scripts": {
     "lint:code": "eslint ./src",
-    "build": "tsdx build",
-    "start": "tsdx watch",
-    "test": "CI=true tsdx test --passWithNoTests",
+    "build": "tsc && vite build",
+    "prepublishOnly": "npm run build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -29,14 +34,17 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
-    "@size-limit/preset-big-lib": "^8.1.0",
+    "@size-limit/preset-small-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "size-limit": "^8.1.0",
-    "tsdx": "^0.14.1"
+    "typescript": "^4.8.3",
+    "vite": "^3.1.3",
+    "vite-plugin-dts": "^1.5.0"
   }
 }
