chore(core-sdk): switch to rollup

--- a/packages/core-sdk/tsconfig.json
+++ b/packages/core-sdk/tsconfig.json
@@ -4,11 +4,12 @@
     "target": "esnext",
     "module": "esnext",
     "useDefineForClassFields": true,
-    "lib": ["dom", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
     "rootDir": "./src",
+    "outDir": "./dist",
     "strict": true,
     "alwaysStrict": true,
     "strictNullChecks": true,
