--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -22,7 +22,7 @@
   "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
   "scripts": {
     "lint:code": "eslint ./src",
-    "build": "tsc && vite build",
+    "build": "rollup -c rollup.config.js",
     "prepublishOnly": "npm run build",
     "size": "size-limit",
     "analyze": "size-limit --why"
@@ -34,17 +34,18 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
     "size-limit": "^8.1.0",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.3",
-    "vite-plugin-dts": "^1.5.0"
+    "typescript": "^4.8.3"
   }
 }
