--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -22,30 +22,36 @@
   "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
   "scripts": {
     "lint:code": "eslint ./src",
-    "build": "rollup -c rollup.config.js",
+    "prettier:write": "prettier -w ./src",
+    "build": "rimraf ./dist && rollup -c rollup.config.js",
     "prepublishOnly": "npm run build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "decimal.js-light": "^2.5.1",
+    "decimal.js-light": "^2.5.1"
+  },
+  "peerDependencies": {
     "ethers": "^5.7.1"
   },
   "devDependencies": {
-    "@apollo/client": "^3.6.9",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   }
 }
