--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,10 +19,11 @@
     "access": "public"
   },
   "scripts": {
-    "lint:code": "eslint ./src",
-    "prettier:write": "prettier -w ./src",
+    "lint:code": "eslint --ext .tsx,.ts ./src && prettier --check ./src",
+    "prettier:write": "prettier -w ./src/**",
     "build": "npm run clean && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
+    "test": "echo 'No tests' && exit 0",
     "prepublishOnly": "npm run build",
     "size": "size-limit",
     "analyze": "size-limit --why"
