--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint:code:all": "npm run lint:code --workspaces",
     "test:all": "npm run test --workspaces",
+    "build:all": "npm run build --workspaces --if-present",
     "size-check:all": "npm run size-limit --workspaces --if-present",
     "lint:commit-message": "commitlint -e",
     "prepare": "husky install"
