--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,7 +25,7 @@
     "clean": "rimraf ./dist",
     "test": "echo 'No tests' && exit 0",
     "prepublishOnly": "npm run build",
-    "size": "size-limit",
+    "size-limit": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
