--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,7 +10,8 @@
     "i18next": "^21.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6"
+    "react-i18next": "^11.18.6",
+    "wagmi": "^0.6.7"
   },
   "scripts": {
     "lint:code": "eslint --ext .tsx,.ts ./src && prettier --check ./src",
