chore(sdk): include jsons in tsconfig

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./src/abis/*.json"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist"
