--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./src/i18n/*.json"],
   "compilerOptions": {
     "jsx": "react",
     "rootDir": "./src",
