--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carrot-kpi/sdk",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "author": "Federico Luzzi <fedeluzzi00@gmail.com>",
   "version": "1.0.0",
   "description": "An SDK for building applications on top of Carrot v1.",
