chore: prepare frontend for ui package usage

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,8 +13,10 @@
     "start": "react-app-rewired start"
   },
   "devDependencies": {
-    "@carrot-kpi/react": "^0.1.2",
+    "@carrot-kpi/react": "^0.2.0",
     "@carrot-kpi/sdk": "^1.0.0",
+    "@carrot-kpi/ui": "^0.1.0",
+    "@emotion/react": "^11.10.4",
     "@reduxjs/toolkit": "^1.8.5",
     "@size-limit/preset-app": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
