--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
       - name: Setup Node.js ${{matrix.node-version}}
         uses: actions/setup-node@v3
         with:
           node-version: ${{matrix.node-version}}
+          cache: "pnpm"
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       - name: Lint and all packages
-        run: npm run lint:code:all
+        run: pnpm lint:all
       - name: Test all packages
-        run: npm run test:all
+        run: pnpm test:all
       - name: Size check all eligible packages
-        run: npm run build:all && npm run size-check:all
+        run: pnpm build:all && pnpm size-check:all
