--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,30 +4,30 @@
   "version": "1.0.0-alpha.4",
   "description": "Frontend for Carrot KPIs.",
   "scripts": {
-    "lint:code": "eslint --ext .tsx,.ts ./src && prettier --check ./src",
+    "lint": "prettier --check ./src && eslint --ext .tsx,.ts ./src",
+    "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
     "prettier:write": "prettier -w ./src/**",
-    "build": "npm run clean && cross-env PUBLIC_URL=\".\" GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build": "pnpm clean && cross-env PUBLIC_URL=\".\" GENERATE_SOURCEMAP=false react-app-rewired build",
     "clean": "rimraf ./build",
     "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
     "size-limit": "size-limit",
     "start": "react-app-rewired start"
   },
   "devDependencies": {
-    "@carrot-kpi/react": "^0.4.2",
-    "@carrot-kpi/sdk": "^1.1.0",
-    "@carrot-kpi/ui": "^0.1.0",
+    "@carrot-kpi/react": "workspace:../react",
+    "@carrot-kpi/sdk": "workspace:../sdk",
+    "@carrot-kpi/ui": "workspace:../ui",
     "@emotion/react": "^11.10.4",
-    "@reduxjs/toolkit": "^1.8.5",
     "@size-limit/preset-app": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
     "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "decimal.js-light": "^2.5.1",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.1",
@@ -43,11 +43,10 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "redux-localstorage-simple": "^2.5.1",
     "size-limit": "^8.1.0",
+    "typescript": "^4.8.4",
     "wagmi": "^0.6.7"
   },
   "browserslist": {
