--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,17 +19,21 @@
     "access": "public"
   },
   "scripts": {
-    "lint:code": "eslint --ext .tsx,.ts ./src && prettier --check ./src",
+    "lint": "prettier --check ./src && eslint --ext .tsx,.ts ./src",
+    "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
     "prettier:write": "prettier -w ./src/**",
-    "build": "npm run clean && rollup -c rollup.config.js",
+    "build": "pnpm clean && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "test": "echo 'No tests' && exit 0",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm build",
     "size-limit": "size-limit",
     "analyze": "size-limit --why"
   },
+  "dependencies": {
+    "web3.storage": "^4.4.0"
+  },
   "peerDependencies": {
-    "@carrot-kpi/sdk": "^1.1.0",
+    "@carrot-kpi/sdk": "workspace:../sdk",
     "ethers": "^5.7.0",
     "i18next": "^21.9.2",
     "react": "^18.2.0",
@@ -37,26 +41,26 @@
     "wagmi": "^0.6.7"
   },
   "devDependencies": {
-    "@carrot-kpi/sdk": "^1.1.0",
+    "@carrot-kpi/sdk": "workspace:../sdk",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "@types/react": "^18.0.21",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.1",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
-    "ethers": "^5.7.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "ethers": "^5.7.0",
     "i18next": "^21.9.2",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-i18next": "^11.18.6",
     "rimraf": "^3.0.2",
-    "prettier": "^2.7.1",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
