--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -25,7 +25,7 @@
     "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
     "build": "pnpm clean && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
-    "test": "echo 'No tests' && exit 0",
+    "test": "jest",
     "prepublishOnly": "pnpm build",
     "size-limit": "size-limit",
     "analyze": "size-limit --why"
@@ -38,17 +38,23 @@
     "ethers": "^5.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
+    "@types/jest": "^29.2.1",
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "babel-jest": "^29.2.2",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.7.0",
+    "jest": "^29.2.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.2.3",
@@ -56,6 +62,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
