--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -63,5 +63,8 @@
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
     "wagmi": "^0.7.7"
+  },
+  "dependencies": {
+    "ipfs-http-client": "^59.0.0"
   }
 }
