--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "^11.10.4",
     "@size-limit/preset-app": "^8.1.0",
     "@size-limit/webpack-why": "^8.1.0",
+    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
@@ -39,7 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "ethers": "^5.7.1",
     "git-revision-webpack-plugin": "^5.0.0",
-    "i18next": "^21.9.2",
+    "i18next": "^22.0.2",
     "ipfs-core": "^0.15.4",
     "multiformats": "^9.7.1",
     "prettier": "^2.7.1",
@@ -47,12 +48,12 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
+    "react-i18next": "^12.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "size-limit": "^8.1.0",
     "typescript": "^4.8.4",
-    "wagmi": "^0.6.7"
+    "wagmi": "^0.7.7"
   },
   "browserslist": {
     "production": [
