--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -51,6 +51,7 @@
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "rimraf": "^3.0.2",
     "size-limit": "^8.1.0",
     "typescript": "^4.8.4",
     "wagmi": "^0.7.7"
