--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - develop
-      - feature/v1
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -17,6 +16,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - name: Setup Node.js ${{matrix.node-version}}
         uses: actions/setup-node@v3
         with:
