--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Deploy to IPFS
         uses: web3-storage/add-to-web3@v2
         id: web3
+        working-directory: ./packages/frontend/
         with:
           web3_token: ${{secrets.WEB3_STORAGE_TOKEN}}
           path_to_add: "./build"
