--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -27,9 +27,7 @@ jobs:
         run: pnpm install
       - name: Build
         working-directory: ./packages/frontend/
-        run: pnpm ipfs-build --filter ./packages/frontend/
-      - name: Ls
-        run: cd ./packages/frontend && ls -l
+        run: pnpm build:all && pnpm ipfs-build --filter ./packages/frontend/
       - name: Deploy to IPFS
         uses: web3-storage/add-to-web3@v2
         id: web3
