--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "prettier --check ./src && eslint --ext .tsx,.ts ./src",
     "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
-    "build": "pnpm clean && cross-env PUBLIC_URL=\".\" GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build": "echo 'not building frontend'",
     "clean": "rimraf ./build",
     "ipfs-build": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
