--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
     "build": "echo 'not building frontend'",
     "clean": "rimraf ./build",
-    "ipfs-build": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
     "size-limit": "size-limit",
     "start": "react-app-rewired start"
