--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,6 +30,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "autoprefixer": "^10.4.13",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "decimal.js-light": "^2.5.1",
@@ -43,6 +44,7 @@
     "i18next": "^22.0.6",
     "ipfs-core": "^0.15.4",
     "multiformats": "^9.7.1",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
@@ -52,6 +54,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "size-limit": "^8.1.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4",
     "wagmi": "^0.7.7"
   },
