--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -69,5 +69,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.3.0"
   }
 }
