--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "Federico Luzzi",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "lint:all": "pnpm -r lint",
+    "build:all": "turbo run build",
+    "lint:all": "turbo run lint",
     "lint:fix:all": "pnpm -r lint:fix",
-    "test:all": "pnpm -r test",
-    "size-check:all": "pnpm -r size-limit",
+    "test:all": "turbo run test",
+    "size-check:all": "turbo run size-limit",
     "commitlint": "commitlint -e",
     "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "husky": "^8.0.1"
+    "husky": "^8.0.1",
+    "turbo": "^1.6.3"
   }
 }
