--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,14 +31,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@fontsource/ibm-plex-mono": "^4.5.12"
-  },
-  "peerDependencies": {
-    "@emotion/react": "^11.10.4"
+    "@fontsource/ibm-plex-mono": "^4.5.12",
+    "class-variance-authority": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@emotion/react": "^11.10.4",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
@@ -56,11 +53,15 @@
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.1",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "path": "^0.12.7",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -70,6 +71,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
-    "size-limit": "^8.1.0"
+    "size-limit": "^8.1.0",
+    "tailwindcss": "^3.2.4"
   }
 }
