--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "tsconfig/ui.json",
   "include": ["./src/**/*"],
   "compilerOptions": {
-    "jsx": "react",
-    "rootDir": "./src",
     "outDir": "./dist"
   }
 }
