--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -7,33 +7,26 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   ipfs-preview-build:
-    timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
-
+        node-version: [18.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: latest
-
       - name: Setup Node.js ${{matrix.node-version}}
         uses: actions/setup-node@v3
         with:
           node-version: ${{matrix.node-version}}
           cache: "pnpm"
-
       - name: Install dependencies
-        run: pnpm -r install
-
+        run: pnpm install --frozen-lockfile
       - name: Build
-        run: pnpm build:all
-
+        run: pnpm build --filter=frontend
       - name: Deploy to IPFS
         uses: web3-storage/add-to-web3@v2
         id: web3
