--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "private": true,
-  "name": "@carrot-kpi/v1-monorepo",
-  "version": "1.0.0",
-  "description": "A monorepo for Carrot v1 packages.",
-  "author": "Federico Luzzi",
-  "license": "GPL-3.0-or-later",
-  "scripts": {
-    "build:all": "turbo run build",
-    "lint:all": "turbo run lint",
-    "lint:fix:all": "pnpm -r lint:fix",
-    "test:all": "turbo run test",
-    "size-check:all": "turbo run size-limit",
-    "commitlint": "commitlint -e",
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "husky": "^8.0.1",
-    "turbo": "^1.6.3"
-  }
+    "private": true,
+    "name": "@carrot-kpi/v1-monorepo",
+    "version": "1.0.0",
+    "description": "A monorepo for Carrot v1 packages.",
+    "author": "Federico Luzzi",
+    "license": "GPL-3.0-or-later",
+    "scripts": {
+        "build": "turbo run build",
+        "lint": "turbo run lint",
+        "format": "turbo run format",
+        "test": "turbo run test",
+        "size-limit": "turbo run size-limit",
+        "commitlint": "commitlint -e",
+        "prepare": "husky install"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.1.2",
+        "@commitlint/config-conventional": "^17.1.0",
+        "husky": "^8.0.1",
+        "prettier": "^2.8.1",
+        "turbo": "^1.6.3"
+    }
 }
