--- a/packages/frontend/.eslintrc
+++ b/packages/frontend/.eslintrc
@@ -1,18 +1,11 @@
 {
+  "root": true,
   "env": {
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "prettier", "plugin:react-hooks/recommended"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "prettier", "@typescript-eslint"],
+  "extends": ["custom", "plugin:react/recommended", "plugin:react-hooks/recommended"],
+  "plugins": ["react"],
   "settings": {
     "react": {
       "version": "detect"
