--- a/packages/react/.eslintrc
+++ b/packages/react/.eslintrc
@@ -1,28 +1,25 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["plugin:react/recommended", "prettier", "plugin:react-hooks/recommended"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "root": true,
+    "env": {
+        "browser": true,
+        "es2021": true
     },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "@typescript-eslint"],
-  "settings": {
-    "react": {
-      "version": "detect"
+    "extends": [
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
+        "custom"
+    ],
+    "plugins": ["react"],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "space-before-function-paren": "off",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "react-hooks/exhaustive-deps": "error"
     }
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "space-before-function-paren": "off",
-    "arrow-body-style": "off",
-    "prefer-arrow-callback": "off",
-    "react-hooks/exhaustive-deps": "error"
-  }
 }
