--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,8 +19,8 @@
     "access": "public"
   },
   "scripts": {
-    "lint": "prettier --check ./src && eslint --ext .tsx,.ts ./src",
-    "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
+    "lint": "eslint --ext .tsx,.ts ./src",
+    "format": "eslint --fix --ext .tsx,.ts ./src",
     "build": "pnpm clean && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "test": "echo 'No tests' && exit 0",
@@ -29,7 +29,7 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "@carrot-kpi/sdk": "workspace:../sdk",
+    "@carrot-kpi/sdk": "workspace:*",
     "ethers": "^5.7.0",
     "i18next": "^22.0.2",
     "react": "^18.2.0",
@@ -37,7 +37,7 @@
     "wagmi": "^0.8.5"
   },
   "devDependencies": {
-    "@carrot-kpi/sdk": "workspace:../sdk",
+    "@carrot-kpi/sdk": "workspace:*",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -45,15 +45,9 @@
     "@size-limit/webpack-why": "^8.1.0",
     "@types/react": "^18.0.23",
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-custom": "workspace:*",
     "ethers": "^5.7.0",
     "i18next": "^22.0.6",
-    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-i18next": "^12.0.0",
     "rimraf": "^3.0.2",
@@ -62,6 +56,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
+    "tsconfig": "workspace:*",
     "wagmi": "^0.8.5"
   }
 }
