--- a/packages/sdk/.eslintrc
+++ b/packages/sdk/.eslintrc
@@ -1,5 +1,4 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": ["plugin:@typescript-eslint/recommended", "prettier"]
+  "root": true,
+  "extends": ["custom"]
 }
