--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,8 +21,8 @@
   },
   "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
   "scripts": {
-    "lint": "prettier --check ./src && eslint --ext .tsx,.ts ./src",
-    "lint:fix": "prettier --write ./src && eslint --fix --ext .tsx,.ts ./src",
+    "lint": "eslint --ext .tsx,.ts ./src",
+    "format": "eslint --fix --ext .tsx,.ts ./src",
     "build": "pnpm clean && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "test": "jest",
@@ -49,14 +49,10 @@
     "@size-limit/webpack-why": "^8.1.0",
     "@types/jest": "^29.2.1",
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
     "babel-jest": "^29.2.2",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-custom": "workspace:*",
     "ethers": "^5.7.0",
     "jest": "^29.2.2",
-    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.2.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -64,6 +60,6 @@
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "tsconfig": "workspace:*"
   }
 }
