--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "tsconfig/sdk.json",
   "include": ["./src/**/*", "./src/abis/*.json"],
   "compilerOptions": {
-    "rootDir": "./src",
     "outDir": "./dist"
   }
 }
