--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,4 +1,5 @@
 {
+    "type": "module",
     "name": "@carrot-kpi/frontend",
     "license": "GPL-3.0-or-later",
     "version": "1.0.0-rc.2",
@@ -11,7 +12,7 @@
     ],
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src",
-        "format": "eslint --fix --ext .tsx,.ts ./src",
+        "format": "eslint --fix --ext .tsx,.ts,.js,.json ./",
         "clean": "rimraf ./build",
         "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
