--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,65 +1,64 @@
 {
-  "name": "@carrot-kpi/sdk",
-  "license": "GPL-3.0-or-later",
-  "author": "Federico Luzzi <fedeluzzi00@gmail.com>",
-  "version": "1.9.2",
-  "description": "An SDK for building applications on top of Carrot v1.",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+    "type": "module",
+    "name": "@carrot-kpi/sdk",
+    "license": "GPL-3.0-or-later",
+    "author": "Federico Luzzi <fedeluzzi00@gmail.com>",
+    "version": "1.9.2",
+    "description": "An SDK for building applications on top of Carrot v1.",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.js"
+        }
+    },
+    "files": [
+        "dist"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
+    "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
+    "scripts": {
+        "lint": "eslint --ext .tsx,.ts ./src",
+        "format": "eslint --fix --ext .tsx,.ts,.js,.json ./",
+        "build": "pnpm clean && rollup -c rollup.config.js",
+        "clean": "rimraf ./dist",
+        "test": "jest",
+        "prepublishOnly": "pnpm build",
+        "size-limit": "size-limit",
+        "analyze": "size-limit --why"
+    },
+    "dependencies": {
+        "decimal.js-light": "^2.5.1",
+        "ethers": "^5.7.0",
+        "multiformats": "^9.9.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.4",
+        "@babel/preset-typescript": "^7.18.6",
+        "@jest/globals": "^29.2.2",
+        "@rollup/plugin-commonjs": "^23.0.2",
+        "@rollup/plugin-json": "^5.0.1",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@size-limit/preset-small-lib": "^8.1.0",
+        "@size-limit/webpack-why": "^8.1.0",
+        "@types/jest": "^29.2.1",
+        "@types/rollup-plugin-peer-deps-external": "^2.2.1",
+        "babel-jest": "^29.2.2",
+        "eslint-config-custom": "workspace:*",
+        "ethers": "^5.7.0",
+        "jest": "^29.2.2",
+        "rimraf": "^3.0.2",
+        "rollup": "^3.2.3",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.34.0",
+        "size-limit": "^8.1.0",
+        "ts-jest": "^29.0.3",
+        "tsconfig": "workspace:*"
     }
-  },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": "https://github.com/carrot-kpi/frontend-monorepo.git",
-  "scripts": {
-    "lint": "eslint --ext .tsx,.ts ./src",
-    "format": "eslint --fix --ext .tsx,.ts ./src",
-    "build": "pnpm clean && rollup -c rollup.config.js",
-    "clean": "rimraf ./dist",
-    "test": "jest",
-    "prepublishOnly": "pnpm build",
-    "size-limit": "size-limit",
-    "analyze": "size-limit --why"
-  },
-  "dependencies": {
-    "decimal.js-light": "^2.5.1",
-    "multiformats": "^9.9.0"
-  },
-  "peerDependencies": {
-    "ethers": "^5.7.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "@jest/globals": "^29.2.2",
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-json": "^5.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@size-limit/preset-small-lib": "^8.1.0",
-    "@size-limit/webpack-why": "^8.1.0",
-    "@types/jest": "^29.2.1",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "babel-jest": "^29.2.2",
-    "eslint-config-custom": "workspace:*",
-    "ethers": "^5.7.0",
-    "jest": "^29.2.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^3.2.3",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.0",
-    "size-limit": "^8.1.0",
-    "ts-jest": "^29.0.3",
-    "tsconfig": "workspace:*"
-  }
 }
