chore(frontend): use craco and split dependencies

--- a/packages/frontend/.eslintrc
+++ b/packages/frontend/.eslintrc
@@ -1,21 +1,26 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["custom", "plugin:react/recommended", "plugin:react-hooks/recommended"],
-  "plugins": ["react"],
-  "settings": {
-    "react": {
-      "version": "detect"
+    "root": true,
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "ignorePatterns": ["craco.config.js", "tailwind.config.js"],
+    "extends": [
+        "custom",
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended"
+    ],
+    "plugins": ["react"],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "space-before-function-paren": "off",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "react-hooks/exhaustive-deps": "error"
     }
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "space-before-function-paren": "off",
-    "arrow-body-style": "off",
-    "prefer-arrow-callback": "off",
-    "react-hooks/exhaustive-deps": "error"
-  }
 }
