chore: add babel config to test task inputs (turbo config)

--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,8 @@
             "inputs": [
                 "src/**/*.{ts,tsx}",
                 "tests/**/*.{ts,tsx}",
-                "src/**/*.test.{ts,tsx}"
+                "src/**/*.test.{ts,tsx}",
+                "babel.config.json"
             ],
             "outputs": []
         },
