--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build": "turbo run build",
         "lint": "turbo run lint",
         "format": "turbo run format",
+        "start": "turbo run start",
         "test": "turbo run test",
         "size-limit": "turbo run size-limit",
         "commitlint": "commitlint -e",
